fixes to the alert

--- a/src/app/opportunity/opportunity.page.html
+++ b/src/app/opportunity/opportunity.page.html
@@ -288,7 +288,7 @@
         </ul>
       </section>
 
-      <section [attr.id]="generateID(opportunityFields.Synopsis)" *ngIf="shouldBeDisplayed(opportunityFields.Synopsis) && opportunity.data?.descriptions[0]?.content">
+      <section [attr.id]="generateID(opportunityFields.Synopsis)" *ngIf="(shouldBeDisplayed(opportunityFields.Synopsis) && opportunity.data?.descriptions[0]?.content) || (shouldBeDisplayed(opportunityFields.Synopsis) && differences?.description)">
 
         <h2>Synopsis
           <samButton *ngIf="differences?.changesExistSynopsis " [buttonId]="'defaultBtnSynopsis'" [buttonText]="!showChangesSynopsis ? 'View Changes' : 'Hide Changes'" [buttonType]="btnType" (click)="showHideSynopsis()"></samButton>
