--- a/src/app/role-management/rolemgmt-content/rolemgmt-content.template.html
+++ b/src/app/role-management/rolemgmt-content/rolemgmt-content.template.html
@@ -85,7 +85,7 @@
                 </div>
                 <div>{{content.status}}</div>
               </div>
-            </div>d
+            </div>
 
             <div class="usa-grid-full m_T-2x">
               <!-- Pending -->
