--- a/src/app/assistance-listing/components/authorization-table/authorization-table.template.html
+++ b/src/app/assistance-listing/components/authorization-table/authorization-table.template.html
@@ -11,9 +11,9 @@
       </td>
       <td>
         <ng-container *ngIf="!hideAddButton">
-          <a class="fal-table-edit" (click)="editAuth(auth.index)" >Edit</a>
+          <a class="fal-table-edit" (click)="editAuth(i)" >Edit</a>
           <i class="fa fa-pencil fal-table-edit" aria-hidden="true" (click)="editAuth(i)"></i>
-          <a class="fal-table-delete" (click)="removeAuth(auth.index)">Remove</a>
+          <a class="fal-table-delete" (click)="removeAuth(i)">Remove</a>
           <i class="fa fa-trash fal-table-delete" aria-hidden="true" (click)="removeAuth(i)"></i>
         </ng-container>
 
