Push code to rebuild image.

--- a/src/app/awards/awards.page.html
+++ b/src/app/awards/awards.page.html
@@ -385,8 +385,8 @@
 						Price Evaluation Percent Difference: {{pepd}}
 						<br />
 						<br />
-						Reason Not Awarded To Small Disadvantaged Business: {{}}<br />
-						Reason Not Awarded To Small Business: {{}}<br />
+						Reason Not Awarded To Small Disadvantaged Business: {{rnatsdb}}<br />
+						Reason Not Awarded To Small Business: {{rnatsb}}<br />
 					</div>
 				</div>
 				<br />
