--- a/src/app/assistance-listing/components/applying-assistance-subform/applying-assistance-subform.template.html
+++ b/src/app/assistance-listing/components/applying-assistance-subform/applying-assistance-subform.template.html
@@ -21,7 +21,7 @@
         </div>
 
         <samTextArea [name]="'list-desc'"
-                     [label]="'Deadline'"
+                     [label]="'Describe this Deadline'"
                      formControlName="description"
         ></samTextArea>
 
