--- a/src/app/assistance-listing/assistance-listing-operations/sections/applying-for-assistance/applying-for-assistance.template.html
+++ b/src/app/assistance-listing/assistance-listing-operations/sections/applying-for-assistance/applying-for-assistance.template.html
@@ -7,6 +7,7 @@
     <samRadioButton [label]="'Deadlines'"
                     [name]="'deadlineFlag-radio-buttons'"
                     [options]="deadlinesFlagOptions"
+                    [required]="true"
                     formControlName="flag"
     ></samRadioButton>
 
