--- a/src/styles/pages/_assistance-listing-operations.scss
+++ b/src/styles/pages/_assistance-listing-operations.scss
@@ -31,6 +31,9 @@
     font-size: 1.7rem;
     font-weight: 400;
     margin-bottom: 1em;
+    .usa-additional_text{
+      padding-left: 315px;
+    }
   }
 
   .code-box{
