--- a/src/app/role-management/permission-selector/permission-selector.html
+++ b/src/app/role-management/permission-selector/permission-selector.html
@@ -67,7 +67,7 @@
         <span>{{option.label}}&nbsp;</span>
       </div>
       <div class="usa-width-one-fourth">
-        <input type="checkbox" (click)="onPermissionClick($event.target.checked, option)" [(ngModel)]="option.isSelected" [disabled]="option.isDefault">&nbsp;
+        <input type="checkbox" (click)="onPermissionClick($event.target.checked, option)" [(ngModel)]="option.isSelected">&nbsp;
       </div>
       <ng-container *ngIf="!hideDefaultColumn">
         <div class="usa-width-one-fourth">
