--- a/src/app/assistance-listing/assistance-listing-operations/sections/financial-info/obligations/obligation.template.html
+++ b/src/app/assistance-listing/assistance-listing-operations/sections/financial-info/obligations/obligation.template.html
@@ -25,27 +25,24 @@
 
         <ng-container *ngFor="let obligation of obligationsInfo; let i = index">
           <tr>
-           <!-- <td *ngFor="let pyCell of pyCellData">{{pyCell}}</td>-->
             <td>{{obligation.assistanceType.name}}</td>
             <td *ngIf="obligation['pFY']['radioOptionId']==='pFYActual'">
-              <!--{{ obligation['pFY']['radioOptionId']==='pFYActual' && obligation['pFY']['textboxValue']===undefined ? '' :
-              (obligation['pFY']['textboxValue']===null ? '$0' : '$' + obligation['pFY']['textboxValue'])}}-->
               {{obligation['pFY']['radioOptionId']==='pFYActual' && obligation['pFY']['textboxValue']!==''?'$' +
-              obligation['pFY']['textboxValue']:'$0'}}
+              obligation['pFY']['textboxValue']:''}}
             </td>
             <td *ngIf="obligation['pFY']['radioOptionId']==='pFYNsi'">Not Separately Identifiable</td>
             <td *ngIf="obligation['pFY']['radioOptionId']==='pFYNa'">Not available</td>
 
             <td *ngIf="obligation['cFY']['radioOptionId']==='cFYEstimate'">
               {{obligation['cFY']['radioOptionId']==='cFYEstimate' && obligation['cFY']['textboxValue']!==''?'$' +
-              obligation['cFY']['textboxValue']:'$0'}}
+              obligation['cFY']['textboxValue']:''}}
             </td>
             <td *ngIf="obligation['cFY']['radioOptionId']==='cFYNsi'">Not Separately Identifiable</td>
             <td *ngIf="obligation['cFY']['radioOptionId']==='cFYNa'">Not available</td>
 
             <td *ngIf="obligation['bFY']['radioOptionId']==='bFYEstimate'">
               {{obligation['bFY']['radioOptionId']==='bFYEstimate' && obligation['bFY']['textboxValue']!==''?'$' +
-              obligation['bFY']['textboxValue']:'$0'}}
+              obligation['bFY']['textboxValue']:''}}
             </td>
             <td *ngIf="obligation['bFY']['radioOptionId']==='bFYNsi'">Not Separately Identifiable</td>
             <td *ngIf="obligation['bFY']['radioOptionId']==='bFYNa'">Not available</td>
