--- a/src/app/organization-detail/AAC-request/AAC-request.template.html
+++ b/src/app/organization-detail/AAC-request/AAC-request.template.html
@@ -38,7 +38,7 @@
         </form>
         <form class="usa-width-two-thirds aac-contractor-section" *ngIf="aacOfficeRadioModel.includes('Contract')" [formGroup]="contractorForm">
           <samText #contractName [required]='true' [control]="contractorForm.get('contractName')" formControlName="contractName" [name]="'contract-name-input'" [label]="'Contractor Name'"></samText>
-          <samText #contractNum [required]='true' [control]="contractorForm.get('contractNum')" formControlName="contractNum" [name]="'contract-number-input'" [label]="'Contract Name'"></samText>
+          <samText #contractNum [required]='true' [control]="contractorForm.get('contractNum')" formControlName="contractNum" [name]="'contract-number-input'" [label]="'Contract Number'"></samText>
           <samText #contractCAGECode [required]='true' [control]="contractorForm.get('cageCode')" formControlName="cageCode" [name]="'cage-input'" [label]="'CAGE Code (For CAGE code reference: https://cage.dla.mil/)'"></samText>
           <samText #contractAdmin [required]='true' [control]="contractorForm.get('contractAdmin')" formControlName="contractAdmin" [name]="'admin-name-input'" [label]="'Contract Administration Name'"></samText>
           <labelWrapper #contractorExpireDateWrapper [required]='true' class="usa-width-two-thirds" [label]="'Contract Expire Date'" [name]="'expire-date'">
@@ -104,11 +104,11 @@
         <span class="usa-width-one-third m_R-0 p_T-2x p_B-1x"><h4>Provide Purpose for AAC Request:</h4></span>
         <p class="usa-width-two-thirds m_T-0 p_T-2x p_B-1x"><span *ngFor="let val of aacReasonCbxModel">&nbsp;{{val}}<br></span></p>
       </div>
-      <div class="usa-width-one-whole m_L-3x m_B-1x" *ngIf="aacReasonCbxModel.indexOf('Used for Reporting with FPDS') !== -1">
+      <div class="usa-width-one-whole m_L-3x m_B-1x" *ngIf="isReasonContainsFPDSReport()">
         <span class="usa-width-one-third m_R-0 p_T-2x p_B-1x"><h4>Sub-tier Agency Code:</h4></span>
         <p class="usa-width-two-thirds m_T-0 p_T-2x p_B-1x">&nbsp;{{fpdsReportForm.get("agencyCode").value}}</p>
       </div>
-      <div class="usa-width-one-whole m_L-3x m_B-1x" *ngIf="aacReasonCbxModel.indexOf('Used for Reporting with FPDS') !== -1">
+      <div class="usa-width-one-whole m_L-3x m_B-1x" *ngIf="isReasonContainsFPDSReport()">
         <span class="usa-width-one-third m_R-0 p_T-2x p_B-1x"><h4>CGAC Code:</h4></span>
         <p class="usa-width-two-thirds m_T-0 p_T-2x p_B-1x">&nbsp;{{fpdsReportForm.get("cgacCode").value}}</p>
       </div>
@@ -117,7 +117,8 @@
       <h3 class="p_T-2x p_B-4x">Office Address Information</h3>
       <p class="m_L-3x m_B-1x" *ngFor="let address of orgAddresses">
         <span class="usa-width-one-third m_R-0 p_T-2x p_B-1x"><h4>{{address.addrType}}:</h4></span>
-        <span class="usa-width-two-thirds p_T-2x p_B-1x">{{address.street1}}<br>{{address.street2}}<br>{{address.city}}, {{address.state}}&nbsp;{{address.postalCode}}<br>{{address.country}}</span>
+        <span class="usa-width-two-thirds p_T-2x p_B-1x">{{address.street1}}<br>
+          <span *ngIf="address.street2.length > 0">{{address.street2}}<br></span>{{address.city}}, {{address.state}}&nbsp;{{address.postalCode}}<br>{{address.country}}</span>
       </p>
     </div>
     <button class="usa-button-primary p_R-4x p_L-4x pull-right" (click)="onSubmitFormClick()">Confirm</button>
