Updated link to to homepage in header

--- a/src/app/app-components/header-links/header-links.component.html
+++ b/src/app/app-components/header-links/header-links.component.html
@@ -1,7 +1,7 @@
 <nav class="sam-ui attached lighter grey borderless menu" aria-label="Main navigation">
   
   <div class="sam-ui container">
-    <a class="item" tabindex="0" (click)="refreshPage()" (keyup.enter)="refreshPage()">
+    <a [routerLink]="['']" class="item" tabindex="0">
       <img style="width:150px;" src="src/assets/img/transition-sam-logo.png"  alt="Transition.sam.gov Logo">
     </a>
     
