--- a/src/app/awards/awards.page.html
+++ b/src/app/awards/awards.page.html
@@ -297,7 +297,7 @@
 					Maximum Order Limit: {{maxOrderLimit}}<br />
 					Fee for Use of Service: {{feeForUseOfService}}<br />
 					Fee Range: {{feeRange}}<br />
-					Ordering Procedure (1000 Characters) <i>Optional if Website URL is provided - otherwise, mandatory</i>: {{orderingProcedure}}<br />
+					Ordering Procedure (1000 Characters) <i>Optional if Website URL is provided - otherwise, mandatory</i>: {{orderingProcedure}}
 				</div>
 				<div id="award-type" *ngIf="awardData.templateType == 'AWARD' || awardData.templateType == 'OTA'">
 					<h3 id="principalPlaceOfPerformance">Principal Place of Performance</h3>
@@ -305,88 +305,87 @@
 					City: {{awardData.principalPlaceOfPerformance.principalPlaceOfPerformanceCity}}<br />
 					County: {{awardData.principalPlaceOfPerformance.principalPlaceOfPerformanceCounty}}<br />
 					State: {{awardData.principalPlaceOfPerformance.principalPlaceOfPerformanceState}}<br />
-					Zip Code (+4): {{awardData.principalPlaceOfPerformance.principalPlaceOfPerformanceZipCode | zipCode}}<br />
-					Country: {{awardData.principalPlaceOfPerformance.principalPlaceOfPerformanceCountry}}<br />
+					Zip Code (+4): {{awardData.principalPlaceOfPerformance.principalPlaceOfPerformanceZipCode | zipCode}}
+					Country: {{awardData.principalPlaceOfPerformance.principalPlaceOfPerformanceCountry}}
 					Congressional District: {{awardData.principalPlaceOfPerformance.principalPlaceOfPerformanceCongDistrict}}<br />
 				</div>
 				<h3 id="ProductOrServiceInformation">Product or Service Information</h3>
-				Product/Service Code: {{productOrServiceCode}}<br />
-				Description: {{productOrServiceDescription}}
+				Product/Service Code: {{awardData.productServiceInformation.productOrServiceCode}}<br />
+				Description: {{awardData.productServiceInformation.productOrServiceDescription}}
 				<br />
 				<br />
 				<div id="award-type" *ngIf="awardData.templateType == 'AWARD' || awardData.templateType == 'IDV'">
-					Principal NAICS Code: {{naicsCode}}<br />
-					Description: {{naicsDescription}}}
+					Principal NAICS Code: {{awardData.productServiceInformation.naicsCode}}<br />
+					Description: {{awardData.productServiceInformation.naicsDescription}}}
 					<br />
 					<br />
-					Bundled Contract: {{contractBundlingDesc}}}<br />
+					Bundled Contract: {{awardData.productServiceInformation.contractBundlingDesc}}}<br />
 					<div id="award-type" *ngIf="awardData.templateType == 'AWARD'">
-						DOD Acquisition Program: {{dodAcquisitionProgram}}}<br />
-						Description: {{dodAcquisitionProgramDesc}}}<br />
+						DOD Acquisition Program: {{awardData.productServiceInformation.dodAcquisitionProgram}}}<br />
+						Description: {{awardData.productServiceInformation.dodAcquisitionProgramDesc}}}<br />
 						<br />
-						Country of Product or Service Origin: {{countryOfProductOrServiceOrigin}}}<br />
-						Place of Manufacture: {{placeOfManufacture}}}<br />
+						Country of Product or Service Origin: {{awardData.productServiceInformation.countryOfProductOrServiceOrigin}}}<br />
+						Place of Manufacture: {{awardData.productServiceInformation.placeOfManufacture}}}<br />
 					</div>
-					Domestic or Foreign Entity: {{domesticOrForeignEntity}}}<br />
-					Recovered Materials/Sustainability: {{recoveredMaterialsSustainability}}}<br />
+					Domestic or Foreign Entity: {{awardData.productServiceInformation.domesticOrForeignEntity}}}<br />
+					Recovered Materials/Sustainability: {{awardData.productServiceInformation.recoveredMaterialsSustainability}}}<br />
 					<div id="award-type" *ngIf="awardData.templateType == 'AWARD'">
-						InfoTech Commercial Item Category: {{itCommercialItemCatDesc}}}
+						InfoTech Commercial Item Category: {{awardData.productServiceInformation.itCommercialItemCatDesc}}}
 					</div>
-					Claimant Program Code: {{claimantProgramCode}}}<br />
-					Description: {{claimantProgramDescription}}}<br />
-					Sea Transportation: {{seaTransportation}}}
+					Claimant Program Code: {{awardData.productServiceInformation.claimantProgramCode}}}<br />
+					Description: {{awardData.productServiceInformation.claimantProgramDescription}}}<br />
+					Sea Transportation: {{awardData.productServiceInformation.seaTransportation}}}
 					<br />
 					<br />
-					GFP Provided Under This Action: {{gfpProvided}}}<br />
+					GFP Provided Under This Action: {{awardData.productServiceInformation.gfpProvided}}}<br />
 					<div id="award-type" *ngIf="awardData.templateType == 'AWARD'">
-						Use of EPA Designated Products: {{useOfEpaProductsDesc}}}<br />
-						Description of Requirement: {{descriptionOfRequirement}}}
+						Use of EPA Designated Products: {{awardData.productServiceInformation.useOfEpaProductsDesc}}}<br />
+						Description of Requirement: {{awardData.productServiceInformation.descriptionOfRequirement}}}
 					</div>
 					<div id="award-type" *ngIf="awardData.templateType == 'IDV'">
-						Description of Contract Requirement: {{descriptionOfRequirement}}}
+						Description of Contract Requirement: {{awardData.productServiceInformation.descriptionOfRequirement}}}
 					</div>
 				</div>
 				<h3 id="competitionInformation">Competition Information</h3>
 				<div id="award-type" *ngIf="awardData.templateType != 'IDV'">
-					Extent Competed for Referenced IDV: {{extent}}<br />
+					Extent Competed for Referenced IDV: {{awardData.competitionInformation.idvExtentCompetedDesc}}<br />
 				</div>
-				Extent Competed: {{extentCompeted}}<br />
-				Solicitation Procedures: {{solicitationProcedures}}<br />
+				Extent Competed: {{awardData.competitionInformation.extentCompetedDescription}}<br />
+				Solicitation Procedures: {{awardData.competitionInformation.solicitationProcedures}}<br />
 				<div id="award-type" *ngIf="awardData.templateType == 'AWARD' || awardData.templateType == 'IDV'">
-					Type of Set Aside: {{typeOfSetAside}}<br />
-					Evaluated Preference: {{evaluatedPreference}}<br />
-					SBIR/STTR: {{sbirSttr}}<br />
-					Fair Opportunity/Limited Sources: {{fairOpp}}<br />
-					Other than Full and Open Competition: {{otfaoc}}<br />
-					Competetive Procedures/Other than Full and Open Competition: {{otfaoc}}<br />
-					Local Area Set Aside: {{localArea}}<br />
-					FedBizOpps: {{fedBizOpps}}<br />
-					A76 Action: {{a76Action}}<br />
-					Commercial Item Acquisition Procedures: {{ciap}}<br />
-					Number of Offers Received: {{numberOfOffersReceived}}<br />
-					Small Business Competitiveness Demonstration Program: {{sbcdp}}<br />
-					Commercial Item Test Program {{citp}}<br />
+					Type of Set Aside: {{awardData.competitionInformation.typeOfSetAsideDescription}}<br />
+					Evaluated Preference: {{awardData.competitionInformation.evaluatedPrefDescription}}<br />
+					SBIR/STTR: {{awardData.competitionInformation.sbbirSttr}}<br />
+					Fair Opportunity/Limited Sources: {{awardData.competitionInformation.fairOpportunityDescription}}<br />
+					Other than Full and Open Competition: {{awardData.competitionInformation.otherThanFullOpenCompetition}}<br />
+					Local Area Set Aside: {{awardData.competitionInformation.localAreaSetAside}}<br />
+					FedBizOpps: {{awardData.competitionInformation.fedBizOppsDesc}}<br />
+					A76 Action: {{awardData.competitionInformation.a76Desc}}<br />
+					Commercial Item Acquisition Procedures: {{awardData.competitionInformation.commercialItemAcquistnDesc}}<br />
+					Number of Offers Received: {{awardData.competitionInformation.numberOfOffersReceived}}<br />
+					Small Business Competitiveness Demonstration Program: {{awardData.competitionInformation.smallBusCompDemonstrationProgram}}<br />
+					Commercial Item Test Program {{awardData.competitionInformation.commercialItemTestProgram}}<br />
 					<br />
 				<div id="award-type" *ngIf="awardData.templateType == 'AWARD'">
-					Pre Award FBO Synopsis: {{pafbos}}<br />
-					SBA/OFPP Synopsis Waiver Pilot: {{sbaofppswp}}<br />
-					Alternative Advertising: {{aa}}
+					Pre Award FBO Synopsis: {{awardData.competitionInformation.preAwardSynopsisDesc}}<br />
+					SBA/OFPP Synopsis Waiver Pilot: {{awardData.competitionInformation.sbaOfppSynopsisWaiverPilot}}<br />
+					Alternative Advertising: {{awardData.competitionInformation.alternativeAdvertising}}
 				</div>
 				</div>
 				<div id="award-type" *ngIf="awardData.templateType == 'OTA' || awardData.templateType == 'OTI'">
-					Nontraditional Government Contractor Participation: {{ngcp}}<br />
-					Type of Agreement: {{typeOfAgreement}}
+					Nontraditional Government Contractor Participation: {{awardData.competitionInformation.nontraditionalGovContParticipation}}<br />
+					Type of Agreement: {{awardData.competitionInformation.typeOfAgreement}}
 				</div>
 				<div id="award-type" *ngIf="awardData.templateType == 'AWARD' || awardData.templateType == 'IDV'">
 					<h3 id="preferenceProgramsOtherData">Preference Programs/Other Data</h3>
-					Contracting Officer's Business Size Selection: {{cobss}}<br />
-					Subcontract Plan: {{subcontractPlan}}<br />
+					Contracting Officer's Business Size Selection: {{awardData.preferencePrograms.contractingOfficerBusSizeDetermination}}<br />
+					Subcontract Plan: {{awardData.preferencePrograms.subcontractPlanDesc}}<br />
 					<div *ngIf="awardData.templateType == 'AWARD'">
-						Price Evaluation Percent Difference: {{pepd}}
+						Price Evaluation Percent Difference: {{awardData.preferencePrograms.priceEvaluationPercentDifference}}
 						<br />
 						<br />
-						Reason Not Awarded To Small Disadvantaged Business: {{rnatsdb}}<br />
-						Reason Not Awarded To Small Business: {{rnatsb}}<br />
+						Reason Not Awarded To Small Disadvantaged Business: {{awardData.preferencePrograms.reasonNotAwardedToSmallDisadvantagedBusiness}}<br />
+						Reason Not Awarded To Small Business: {{awardData.preferencePrograms.reasonNotAwardedToSmallBusiness}}<br />
 					</div>
 				</div>
 				<br />
